[package]
name = "guitest"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.1"
raw-window-handle = "0.3.3"
bindings = { path = "../bindings" }
winrt = { git = "https://github.com/microsoft/winrt-rs" }
