[package]
name = "wmdgen"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winmd = { git = "https://github.com/microsoft/winrt-rs" }
took = "0.1.2"
argh = "0.1.3"
crossbeam-utils = "0.7.2"
